--- a/style.css
+++ b/style.css
@@ -8,13 +8,66 @@ h1{
     padding: 15px;
 }
 
+h2{
+    font-size: 2.8vw;
+}
+
+p{
+    font-size: 1.8vw;
+}
+
 button{
-    width: 5vw;
+    width: 8vw;
+    height: 8vw;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+button:hover{
+    width: 9vw;
+    height: 9vw;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .box{
     border: 0px solid blue;
     padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.imgprojetos{
+    width: 18vw; 
+    border-radius: 50%;
+    border: 0.5px solid black;
+}
+
+.imgprojetos:hover{
+    transition: all 0.3s ease;
+    width: 25vw; 
+    border-radius: 0%;
+    border: 0.5px solid black;
+}
+
+.textprojetosright{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    align-content: flex-end;
+    border: 1px solid black;
+    width: 50VW;
+}
+
+.textprojetosleft{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    border: 1px solid black;
+    width: 50VW;
 }
 
 #principal{
@@ -34,18 +87,20 @@ button{
 }
 
 #main{
-    width: 75vw;
+    width: 70vw;
     height: 100vh; 
     border: 0px solid blue; 
 }
 
 #sideright{
-    width: 5vw;
+    width: 10vw;
     height: 100vh;  
     border: 0px solid red;
     background-color: #eee;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 #perfil{
@@ -56,4 +111,9 @@ button{
 #linha{
     border: 1px solid gray;
     width: 60vw;
+}
+
+#linha1{
+    border: 1px solid gray;
+    width: 40vw;
 }
